refactoring
update CreateOrderRequest and ClaimsPrincipalExtensions
