# backend/OrderService/OrderService.Http/Dtos/CreateOrderRequest.cs
@@ -1,8 +1,8 @@
 namespace OrderService.Http.Dtos;
 
 public record CreateOrderRequest(
-    string CustomerName,
-    string CustomerEmail,
+    string? CustomerName,
+    string? CustomerEmail,
     List<OrderItemCreate> Items,
     string? DeliveryAddress = null);
 
